--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-dropzone-uploader": "^2.11.0",
     "react-easy-crop": "^5.0.5",
     "react-image-crop": "^11.0.5",
     "react-router-dom": "^6.22.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   }
 }
